--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1>Simple Word Guess Game Using Javascript</h1>
-<div id="gameboard" ></div>
+<div id="gamearea" ></div>
 
 <script src="app.js"></script>
 </body>
