--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<h1>Simple Word Guess Game Using Javascript</h1>
-<div id="gamearea" ></div>
+<h1> Word Guess Game </h1>
+<div id="area" ></div>
 
 <script src="app.js"></script>
 </body>
