Added div elements for each letter

--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 
 <body>
 <h1> Word Guess Game </h1>
-<div id="area" ></div>
+<div class="cell cell-a" id="cell_1" contenteditable="true"></div>
+<div class="cell cell-b" id="cell_2" contenteditable="true"></div>
+<div class="cell cell-c" id="cell_3" contenteditable="true"></div>
+<div class="cell cell-d" id="cell_4" contenteditable="true"></div>
+<div class="cell cell-e" id="cell_5" contenteditable="true"></div>
+<div class="cell cell-f" id="cell_6" contenteditable="true"></div>
+<div class="cell cell-g" id="cell_7" contenteditable="true"></div>
+<div class="cell cell-h" id="cell_8" contenteditable="true"></div>
+<div class="cell cell-i" id="cell_9" contenteditable="true"></div>
+<div class="cell cell-j" id="cell_10" contenteditable="true"></div>
+<div class="cell cell-k" id="cell_11" contenteditable="true"></div>
+<div class="cell cell-l" id="cell_12" contenteditable="true"></div>
+<div class="cell cell-m" id="cell_13" contenteditable="true"></div>
+<div class="cell cell-n" id="cell_14" contenteditable="true"></div>
+<div class="cell cell-o" id="cell_15" contenteditable="true"></div>
+<div class="cell cell-p" id="cell_16" contenteditable="true"></div>
+<div class="cell cell-q" id="cell_17" contenteditable="true"></div>
+<div class="cell cell-r" id="cell_18" contenteditable="true"></div>
+<div class="cell cell-s" id="cell_19" contenteditable="true"></div>
+<div class="cell cell-t" id="cell_20" contenteditable="true"></div>
+<div class="cell cell-u" id="cell_21" contenteditable="true"></div>
+<div class="cell cell-v" id="cell_22" contenteditable="true"></div>
+<div class="cell cell-w" id="cell_23" contenteditable="true"></div>
+<div class="cell cell-x" id="cell_24" contenteditable="true"></div>
+<div class="cell cell-y" id="cell_25" contenteditable="true"></div>
+<div class="cell cell-z" id="cell_26" contenteditable="true"></div>
 
 <script src="app.js"></script>
 </body>
